[package]
name = "kyctl"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
kyberos-protocol = { path = "../kyberos-protocol" }
