[package]
name = "kyd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
etcd-client = "0.14.0"
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
warp = "0.3.7"
kyberos-protocol = { path = "../kyberos-protocol" }
